--- a/styles/st.css
+++ b/styles/st.css
@@ -2,3 +2,24 @@
     margin: 0;
     padding: 0;
 }
+h1{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.fst-task .img-containar{
+display: grid;
+grid-template-columns: 400px 600px;
+width: 100%;
+border: 2px solid black;
+}
+.img-containar img{
+    width: 325px;
+}
+
+
+@media  screen and (max-width:576px) {
+    .fst-task .img-containar{
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+}
